@@ -37,7 +37,7 @@ static Command_Builder "PeriodicSupplier -Create s1 -Admin sa1 -Proxy s1_proxy -
 
 static Command_Builder "Filter -CreateFilter f1 ff"
 static Command_Builder "Filter -Add_Constraint f1 'PoolId = 1'"
-static Command_Builder "Filter -Add_Constraint f1 'LaneId = 1'"
+static Command_Builder "Filter -Add_Constraint f1 'LaneId = 0'"
 static Command_Builder "Filter -Add_Filter f1 s1_proxy"
 
 ### --- Create Supplier s2 connected to sa1 ----
@@ -45,14 +45,14 @@ static Command_Builder "PeriodicSupplier -Create s2 -Admin sa1 -Proxy s2_proxy -
 
 static Command_Builder "Filter -CreateFilter f2 ff"
 static Command_Builder "Filter -Add_Constraint f2 'PoolId = 1'"
-static Command_Builder "Filter -Add_Constraint f2 'LaneId = 2'"
+static Command_Builder "Filter -Add_Constraint f2 'LaneId = 1'"
 static Command_Builder "Filter -Add_Filter f2 s2_proxy"
 
 ### --- Create Supplier s3 connected to sa2 ----
 static Command_Builder "PeriodicSupplier -Create s3 -Admin sa1 -Proxy s3_proxy -EventType Path3 -Priority 3 -Period 10000 -ExecTime 10000 -Phase 0 -Iter 5 -Load 1 "
 static Command_Builder "Filter -CreateFilter f3 ff"
 static Command_Builder "Filter -Add_Constraint f3 'PoolId = 1'"
-static Command_Builder "Filter -Add_Constraint f3 'LaneId = 3'"
+static Command_Builder "Filter -Add_Constraint f3 'LaneId = 2'"
 static Command_Builder "Filter -Add_Filter f3 s3_proxy"
 
 ##--------- Run -------------
